--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: M.S. student in the department of statistics at the University of Chicago # the website title (if blank, full name will be used instead)
 first_name: Xinchen
 middle_name: 
 last_name: Du
